Fix not scrolling to focused option when using Tab